--- a/library.api/Properties/launchSettings.json
+++ b/library.api/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14051",
+      "applicationUrl": "http://localhost:14051/api/book",
       "sslPort": 44386
     }
   },
@@ -20,7 +20,7 @@
     "library.api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "http://localhost:5000/api/book",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
